[package]
name = "pantheon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.7"
axum-extra = "0.9"
chrono = "0.4"
config = "0.14"
redis = { version = "0.24", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "request-id", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
validator = { version = "0.17", features = ["derive"] }
